# xml2json-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: test.yml
src/: error.rs  json.rs  lib.rs  utils.rs  xml.rs
tests/: lib.rs
tests/data/: cds.json  cds.xml  childobj.json  complex.json  complex.xml  lists.json  lists.xml  soap.json
tests/generator/: generate  package-lock.json  package.json
tests/generator/lib/: index.js  json.js  xml.js
tests/integration/: json.rs  mod.rs  xml.rs
