[package]
name = "xml2json"
version = "1.0.3"
authors = ["Colin Gabrielson <colin.gabrielson@gmail.com>"]
edition = "2018"
description = "A library for converting to and from XML/JSON"
license = "MIT"
repository = "https://github.com/azuqua/xml2json-rs"
keywords = ["xml", "json", "conversion"]
categories = ["encoding", "parsing", "text-processing"]
readme = "README.md"

[dependencies]
regex = "1.3.7"
lazy_static = "1.4.0"
serde = "1.0"
quick-xml = "0.23.0"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.0.0"
